--- a/_locales/zh/handlebit-strings.json
+++ b/_locales/zh/handlebit-strings.json
@@ -23,8 +23,11 @@
 	"handlebit.littleStarMelody|block":"小星星旋律",
 	"handlebit.HandleButton.B1|block":"B1",
 	"handlebit.HandleButton.B2|block":"B2",
+	"handlebit.HandleButton.B3|block":"B3",
+	"handlebit.HandleButton.B4|block":"B4",
 	"handlebit.HandleButton.JOYSTICK1|block":"左摇杆",
 	"handlebit.HandleButton.JOYSTICK2|block":"右摇杆",
+	"handlebit.HandleSensorValue.SOUND|block":"声音",
 	"handlebit.HandleSensorValue.POWER|block":"电压",
 	"handlebit.HandleSensorValue.JOYSTICK_X1|block":"左摇杆X",
 	"handlebit.HandleSensorValue.JOYSTICK_Y1|block":"左摇杆Y",
@@ -40,7 +43,11 @@
 	"handlebit.HandleLights.All|block":"全部",
 	"handlebit.HandleFanPort.port1|block":"接口1",
 	"handlebit.HandleKnobPort.port1|block":"接口1",
+	"handlebit.HandleKnobPort.port2|block":"接口2",
 	"handlebit.handlebit_ultrasonic|block":"超声波传感|%port|器值(Cm)",
 	"handlebit.handle_setFanSpeed|block":"设置风扇接口|%port|和速度|%speed|(-100~100)",
-	"handlebit.handle_getKnobValue|block":"获取旋钮|%port|值(0~100)"
+	"handlebit.handle_getKnobValue|block":"获取旋钮|%port|值(0~100)",
+	"handlebit.handle_getTouchValue|block":"触摸传感器|%port|被按下",
+	"handlebit.HandleTouchPort.port1|block":"接口1",
+	"handlebit.HandleTouchPort.port2|block":"接口2"
 }
