--- a/_locales/zh/handlebit-jsdoc-strings.json
+++ b/_locales/zh/handlebit-jsdoc-strings.json
@@ -1,12 +1,12 @@
 {
 	"handlebit.handlebitInit":"Handlebit板初始化，请在开机时执行",
-	"handlebit.setPixelRGB":"设置彩灯颜色",
-	"handlebit.setPixelRGBArgs":"设置彩灯颜色，输入索引，范围1到9",
+	"handlebit.handle_setPixelRGB":"设置彩灯颜色",
+	"handlebit.handle_setPixelRGBArgs":"设置彩灯颜色，输入索引，范围1到9",
 	"handlebit.clearLight":"清除彩灯颜色，关闭彩灯",
-	"handlebit.checkCurrentColor":"获取颜色传感器检测到的颜色值",
+	"handlebit.handle_checkCurrentColor":"获取颜色传感器检测到的颜色值",
 	"handlebit.littleStarMelody":"小星星旋律",
 	"handlebit.onHandleButtonPressed":"侦测按键手柄按下状态",
-	"handlebit.getHandleSensorValue":"返回手柄传感器值",
+	"handlebit.handle_getHandleSensorValue":"返回手柄传感器值",
 	"handlebit.handle_setFanSpeed":"设置风扇模块的速度",
 	"handlebit.handle_shake":"开启或者关闭手柄震动",
 	"handlebit.handle_getKnobValue":"返回旋钮传感器的值",
